--- a/.github/workflows/tauri-build.yml
+++ b/.github/workflows/tauri-build.yml
@@ -6,6 +6,9 @@ on:
       - '*'
   workflow_dispatch:
 
+permissions:
+  contents: write
+  
 jobs:
   build:
     strategy:
@@ -32,16 +35,43 @@ jobs:
         with:
           node-version: 20
 
+      # 缓存 node_modules
+      - name: Cache node_modules
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: node-modules-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            node-modules-${{ runner.os }}-
+
+      - name: Install frontend dependencies
+        run: npm install
+
+      - name: Build frontend
+        run: npm run build
+
       - name: Install Rust stable
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.platform.target }}
 
-      - name: Install frontend dependencies
-        run: npm ci
+      # 缓存 Cargo registry 和 git
+      - name: Cache cargo registry
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+          key: cargo-registry-${{ runner.os }}-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Build frontend
-        run: npm run build
+      # 缓存 target 目录（构建产物）
+      - name: Cache cargo build
+        uses: actions/cache@v4
+        with:
+          path: src-tauri/target
+          key: cargo-build-${{ runner.os }}-${{ matrix.platform.target }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            cargo-build-${{ runner.os }}-${{ matrix.platform.target }}-
 
       - name: Build Tauri app
         uses: tauri-apps/tauri-action@v0
@@ -49,14 +79,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tagName: ${{ env.TAG_NAME }}
-          releaseName: "ClipBox ${{ env.TAG_NAME }}" # ✅ 必须加
-          releaseBody: "自动构建发布版本 ${{ env.TAG_NAME }}"
           includeDebug: false
           includeRelease: true
           releaseDraft: false
           prerelease: false
 
-      # 上传构建产物，方便调试下载
+      # 保留上传构建产物的步骤，方便查看构建结果
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
